[android] Merge Android Studio Hedgehog Beta 5
(cherry picked from commit 7c141eae858959af9c0a63b177eda3d4c313876c)

IJ-MR-120061

GitOrigin-RevId: 7abe5fa74714c9b153a8bce342d0e84af19fa29d